# NeuroSeller_Bitrix

chat/: tasks.py  views.py
chat/migrations/: 0001_initial.py
chat/services/: __init__.py  base.py
conf/: middleware.py  urls.py
crm/: models.py  tasks.py  views.py
crm/migrations/: 0001_initial.py
crm/services/bitrix/: __init__.py  base_methods.py
neuroseller/: .gitattributes  DEPLOYMENT.md  requirements.txt
neuroseller/chat/services/: funcs.py  settings.py
neuroseller/chat/templates/bitrix/: widget.html
neuroseller/conf/: celery.py  settings.py
neuroseller/crm/: analyze.py  services_old.py
neuroseller/crm/services/: request_data_handler.py
neuroseller/crm/services/amo/: __init__.py
neuroseller/crm/services/bitrix/: chat_methods.py  funnel_methods.py
neuroseller/users/: admin.py
neuroseller/users/templates/stats/: index.html
sellmind/: .gitignore  README.md  docker-compose.yaml  pyproject.toml
sellmind/chat/: admin.py  models.py  urls.py
sellmind/chat/migrations/: 0002_initial.py
sellmind/chat/services/: build_history.py  documents.py
sellmind/chat/templates/bitrix/: install.html
sellmind/crm/: admin.py  urls.py
sellmind/crm/services/: crm_abs.py  outgoing.py
sellmind/crm/services/bitrix/: lead_methods.py  meet_methods.py
sellmind/crm/services/topnlab/: topnlab_integration.py
sellmind/users/: models.py  stats.py  urls.py  views.py
sellmind/utils/: models.py
users/migrations/: 0001_initial.py
